<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Recovery Tools</string>
    <string name="settings">Settings</string>
    <string name="sCWM">CWM Recovery</string>
    <string name="sFlashRecovery">Flash Recovery</string>
    <string name="sFlashKernel">Flash Kernel</string>
    <string name="sHistory">History</string>
    <string name="sTWRP">TWRP Recovery</string>
    <string name="sPhilz">Philz Recovery</string>
    <string name="sOTHER">Other from Storage</string>
    <string name="sRecoveryBackup">Backup Recovery</string>
    <string name="sKernelBackup">Backup Kernel</string>
    <string name="backups">Backups</string>
    <string name="go">Go</string>
    <string name="sRebooter">Rebooter</string>
    <string name="restore">Restore</string>
    <string name="rename">Rename</string>
    <string name="sClearCache">Clear downloaded recoveries</string>
    <string name="report">Report bug</string>
    <string name="sExit">Exit</string>
    <string name="xda">Open XDA-Thread</string>
    <string name="set_name">Name of Backup</string>
    <string name="bak_warning">Before you do some actions with Recovery-Tools please create an backup and store it on your PC.
        \nBackups will be created under %s.
        \nThe DEV is not responsible on the damages of your device.
    </string>
    <string name="flash_options">Flash Options</string>
    <string name="risk">I know the risk</string>
    <string name="sReboot">Reboot</string>
    <string name="sRebootRecovery">Reboot Recovery</string>
    <string name="sRebootBootloader">Reboot Bootloader</string>
    <string name="info">Information</string>
    <string name="flashed">Partition flashed.</string>
    <string name="warning">Warning!</string>
    <string name="kernel_to">Flashing the Recovery System on this devices will flash the boot.img (Kernel) to Stock with custom Recovery (this can cause bootloops, save a backup of Boot.img on your PC).</string>
    <string name="flash_over_recovery">Flash Recovery now? (needs to Reboot into Recovery)</string>
    <string name="instructions">Instructions</string>
    <string name="instruction">CWM:
        \nMain Menu -> install zip from sdcard -> choose zip from sdcard
        \n\nTWRP:
        \nMain Menu -> Install
    </string>

    <string name="bak_done">Backup completed</string>
    <string name="backupalready">Backup already exists.</string>
    <string name="no_backup">No existing Backup found (%s/Recovery-Tools/backups/)
        \n\nCreate one now?
    </string>
    <string name="error">Error</string>
    <string name="not_supportded">Your Device is not supported by the developer yet. Scan System and
        Report unsupported Device or try to find partition (reboot once into recovery)?
    </string>
    <string name="no_root">"Device not Rooted. Please Root it. More information under
        \n\nxda-developer.com"
    </string>
    <string name="using_dd">Using dd. Recovery in FS</string>
    <string name="using_mtd">Use flash/dump_image (MTD)</string>

    <string name="Downloading">Downloading&#8230;</string>
    <string name="commentar">Commentar</string>
    <string name="commenthint">Comment here, what is not working correctly (download, flash, common
        support or other)
    </string>
    <string name="positive">Yes, please</string>
    <string name="neutral">No, thanks</string>
    <string name="negative">Cancel</string>

    <string name="log">Log Shell-Commands</string>
    <string name="showlog">Show Logs</string>

    <string name="delete">Delete</string>
    <string name="sBackupMgr">Backup Manager</string>
    <string name="setname">Set name of Backup</string>
    <string name="reboot_recovery_now">Reboot in to recovery now?</string>
    <string name="flashing">Flashing&#8230;</string>
    <string name="restoring">Restoring&#8230;</string>
    <string name="creating_bak">Creating Backup&#8230;</string>

    <string name="download_utils">To use this App you need to download small tools (around 512KB).
        This requires a internet connection.
        \nDownload it now?
    </string>
    <string name="over_recovery">Device will be flashed over recovery</string>
    <string name="ShowAds">Show Ads to support</string>

    <string name="please_restart">Please restart the app to apply changes</string>
    <string name="please_ads">Please turn the Ads on to support my work! :(</string>
    <string name="donate_to_support">Donate over the menu to support my work! :)</string>

    <string-array name="donation_google_catalog_values">
        <item>0,50 Euro</item>
        <item>1 Euro</item>
        <item>2 Euros</item>
        <item>3 Euros</item>
        <item>5 Euros</item>
    </string-array>

    <string name="donate">Donate</string>

    <string name="never_again">Never show again</string>
    <string name="try_again">Try again!</string>
    <string name="later">Later</string>

    <string name="no_choosed">No File chosen</string>
    <string name="update">Update recovery list</string>
    <string name="pick_file">Pick File</string>
    <string name="flash_error">Failed to flash</string>
    <string name="res_error">Failed to restore</string>
    <string name="bak_error">Failed to backup</string>
    <string name="current_recovery">Current Recovery: %s</string>
    <string name="stock">Stock</string>
    <string name="changelog">Changelog</string>

    <string name="use_supersu">SuperSu from Chainfire not recognized on your device. Please use it to avoid errors. Download SuperSu (from Play Store) now?</string>
    <string name="bak_deleted">%s deleted</string>

    <string name="extract_failed">Extract needed files from App failed. Please restart the App.</string>
    <string name="no_history">No history found</string>

    <string name="styles">Styles</string>
    <string-array name="styles">
        <item>Styles</item>
        <item>Holo Light Dark Bar Style</item>
        <item>Holo Light Style</item>
        <item>Holo Dark Style</item>
    </string-array>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>