<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/menu_drawer"
        android:orientation="vertical"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:clickable="false">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/xda"
            android:textColor="@android:color/white"
            android:id="@+id/bXDA"
            android:onClick="bXDA"
            android:layout_weight="1" />

        <Button
            android:text="@string/report"
            android:id="@+id/bReport"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="bReport"
            android:layout_weight="1" />

        <Spinner
            style="@style/spinnerStyleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/styles"
            android:id="@+id/spStyle"
            android:spinnerMode="dropdown"
            android:layout_weight="1"
            android:textAlignment="center" />

        <CheckBox
            android:text="@string/ShowAds"
            android:id="@+id/cbShowAds"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="cbShowAds"
            android:layout_weight="1" />

        <CheckBox
            android:text="@string/log"
            android:id="@+id/cbLog"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="cbLog"
            android:layout_weight="1" />

        <Button
            android:text="@string/showlog"
            android:id="@+id/bShowLogs"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="bShowLogs"
            android:layout_weight="1" />

        <Button
            android:text="@string/donate"
            android:id="@+id/bDonate"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="bDonate"
            android:layout_weight="1" />

        <Button
            android:text="@string/sExit"
            android:id="@+id/bExit"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="bExit"
            android:layout_weight="1" />

</LinearLayout>