<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView" >

    <LinearLayout
        android:id="@+id/RecoveryLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="?button_style"
            android:id="@+id/bCWM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Go"
            android:tag="clockwork"
            android:drawableLeft="@drawable/ic_cwm"
            android:text="@string/sCWM"
            android:visibility="visible" />

        <Button
            style="?button_style"
            android:id="@+id/bTWRP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Go"
            android:tag="twrp"
            android:drawableLeft="@drawable/ic_twrp"
            android:text="@string/sTWRP" />

        <Button
            style="?button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sPhilz"
            android:id="@+id/bPHILZ"
            android:tag="philz"
            android:layout_gravity="center_horizontal"
            android:onClick="Go" />

        <Button
            style="?button_style"
            android:id="@+id/bFlashOtherRecovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_flash"
            android:onClick="bFlashOtherRecovery"
            android:text="@string/sOTHER" />

        <Button
            style="?button_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sHistory"
            android:id="@+id/bRecoveryHistory"
            android:drawableLeft="@drawable/ic_history"
            android:layout_gravity="center"
            android:onClick="bShowRecoveryHistory" />
    </LinearLayout>
</ScrollView>