<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/bStockKernel"
            style="?button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_stock"
            android:onClick="FlashSupportedKernel"
            android:tag="stock"
            android:text="@string/stock"
            android:visibility="visible" />

        <Button
            android:id="@+id/bFlashOtherKernel"
            style="?button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_flash"
            android:onClick="bFlashOtherKernel"
            android:tag="kernel"
            android:text="@string/sOTHER" />

        <Button
            android:id="@+id/bRecoveryHistory"
            style="?button_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_history"
            android:onClick="showFlashHistory"
            android:tag="kernel"
            android:text="@string/sHistory" />
    </LinearLayout>
</ScrollView>